--- a/mandelbulber2/formula/ui/difs_greek_ifs.ui
+++ b/mandelbulber2/formula/ui/difs_greek_ifs.ui
@@ -407,6 +407,13 @@
     </layout>
    </item>
    <item>
+    <widget class="Line" name="line_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout_28" stretch="0,1">
      <item>
       <widget class="QLabel" name="label_106">
@@ -906,10 +913,31 @@
      <property name="spacing">
       <number>2</number>
      </property>
-     <item row="1" column="1">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledK_false">
-       <property name="text">
-        <string notr="true">abs(zc.z)</string>
+     <item row="0" column="2">
+      <widget class="MyDoubleSpinBox" name="spinbox3_transf_offsetF_000_x">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="suffix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>6</number>
+       </property>
+       <property name="minimum">
+        <double>-99.989999999999995</double>
+       </property>
+       <property name="maximum">
+        <double>99.989999999999995</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
        </property>
       </widget>
      </item>
@@ -941,6 +969,13 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="1">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledK_false">
+       <property name="text">
+        <string notr="true">abs(zc.z)</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="1">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledBx">
        <property name="text">
@@ -948,45 +983,17 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="2">
-      <widget class="MyDoubleSpinBox" name="spinbox3_transf_offsetF_000_x">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="prefix">
-        <string/>
-       </property>
-       <property name="suffix">
-        <string/>
-       </property>
-       <property name="decimals">
-        <number>6</number>
-       </property>
-       <property name="minimum">
-        <double>-99.989999999999995</double>
-       </property>
-       <property name="maximum">
-        <double>99.989999999999995</double>
-       </property>
-       <property name="singleStep">
-        <double>0.100000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="label_20">
-       <property name="text">
-        <string>tempppp</string>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout_12" columnstretch="0,0">
+    <widget class="QLabel" name="label_30">
+     <property name="text">
+      <string>Cross Section</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout_12" columnstretch="0,1">
      <property name="spacing">
       <number>2</number>
      </property>
@@ -1065,7 +1072,7 @@
    <item>
     <widget class="QLabel" name="label_29">
      <property name="text">
-      <string>cross section (enable one or more)</string>
+      <string>standard cross section shapes (enable one or more)</string>
      </property>
     </widget>
    </item>
@@ -1097,7 +1104,7 @@
    <item>
     <widget class="MyGroupBox" name="groupCheck_transf_function_enabledF_false">
      <property name="title">
-      <string>&amp;multi shape</string>
+      <string>&amp;multi shape (can mix with the above three shapes)</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
